# miniscience-4th-term

./: .gitignore
2025/01_meshes/cpp/: sample04.cpp
2025/02_vtk/cpp/: CMakeLists.txt  Lab2.cpp  cubic2d.cpp
